@@ -12,9 +12,11 @@ import org.springframework.stereotype.Service;
 
 import java.net.InetAddress;
 import java.net.NetworkInterface;
+import jakarta.annotation.PostConstruct;
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.Enumeration;
+import java.util.List;
 
 @Slf4j
 @Service
@@ -29,6 +31,28 @@ public class RealDataService {
     private long lastBytesIn  = 0;
     private long lastBytesOut = 0;
     private boolean firstRun  = true;
+
+    private String actualMac = "Unknown";
+
+    @PostConstruct
+    public void init() {
+        try {
+            InetAddress localHost = InetAddress.getLocalHost();
+            NetworkInterface ni = NetworkInterface.getByInetAddress(localHost);
+            if (ni != null) {
+                byte[] mac = ni.getHardwareAddress();
+                if (mac != null) {
+                    StringBuilder sb = new StringBuilder();
+                    for (int i = 0; i < mac.length; i++) {
+                        sb.append(String.format("%02X%s", mac[i], (i < mac.length - 1) ? ":" : "")).toString();
+                    }
+                    actualMac = sb.toString();
+                }
+            }
+        } catch (Exception e) {
+            log.warn("Could not determine actual MAC address", e);
+        }
+    }
 
     // AJT Unit 2 — Multithreading: same @Scheduled pattern as SimulatorService
     // AJT Unit 3 — Java Networking: reads real bytes from this machine's NIC
@@ -59,13 +83,20 @@ public class RealDataService {
             // AJT Unit 3 — InetAddress: get local machine IP
             String localIp = InetAddress.getLocalHost().getHostAddress();
 
-            // find or create "My Laptop" device
+            // find or create "My Laptop" device for this machine's own traffic
             Device myDevice = deviceRepository.findByDeviceName("My Laptop")
+                .map(d -> {
+                    // Update MAC address if it was REAL-NIC
+                    if ("REAL-NIC".equals(d.getMacAddress()) || d.getMacAddress() == null) {
+                        d.setMacAddress(actualMac);
+                        deviceRepository.save(d);
+                    }
+                    return d;
+                })
                 .orElseGet(() -> deviceRepository.save(Device.builder()
                     .deviceName("My Laptop")
                     .ipAddress(localIp)
-                    .macAddress("REAL-NIC")
-                    .deviceType(Device.DeviceType.ADMIN)
+                    .macAddress(actualMac)
                     .build()));
 
             usageLogRepository.save(UsageLog.builder()
@@ -76,11 +107,65 @@ public class RealDataService {
                 .timestamp(LocalDateTime.now())
                 .build());
 
-            log.info("RealDataService: recorded {:.2f} MB (in: {} bytes, out: {} bytes)",
-                     totalMB, deltaIn, deltaOut);
+            log.info("RealDataService: recorded {} MB (in: {} bytes, out: {} bytes)",
+                     String.format("%.2f", totalMB), deltaIn, deltaOut);
+
+            // Also ping all discovered devices and record basic usage logs
+            recordDiscoveredDeviceActivity();
 
         } catch (Exception e) {
             log.error("RealDataService error: {}", e.getMessage());
+        }
+    }
+
+    /**
+     * AJT Unit 3 — Java Networking:
+     * For every discovered device in the database, pings it and records an activity log.
+     * This ensures real-mode dashboards show data for ALL WiFi devices,
+     * not just "My Laptop".
+     *
+     * Note: We can't read actual per-device byte counts without router SNMP access,
+     * so we record ping latency as a proxy for device activity.
+     */
+    private void recordDiscoveredDeviceActivity() {
+        List<Device> allDevices = deviceRepository.findByIsActiveTrue();
+
+        for (Device device : allDevices) {
+            // skip "My Laptop" — already recorded above with real byte counts
+            if ("My Laptop".equals(device.getDeviceName())) continue;
+
+            try {
+                InetAddress addr = InetAddress.getByName(device.getIpAddress());
+
+                long start = System.currentTimeMillis();
+                boolean reachable = addr.isReachable(2000);
+                long latencyMs = System.currentTimeMillis() - start;
+
+                // Update device status based on ping result
+                String newStatus = reachable ? "ONLINE" : "OFFLINE";
+                if (!newStatus.equals(device.getStatus())) {
+                    device.setStatus(newStatus);
+                    deviceRepository.save(device);
+                }
+
+                if (reachable) {
+                    // Record a usage log entry — use latency as a proxy metric
+                    // Low latency = idle, high latency = potentially under load
+                    double estimatedMB = Math.max(0.01, latencyMs * 0.005); // rough heuristic
+                    double estimatedPct = Math.min((estimatedMB / 100.0) * 100, 100.0);
+
+                    usageLogRepository.save(UsageLog.builder()
+                        .device(device)
+                        .bytesUsed(estimatedMB)
+                        .bandwidthPercentage(estimatedPct)
+                        .trafficType("REAL_TRAFFIC")
+                        .timestamp(LocalDateTime.now())
+                        .build());
+                }
+
+            } catch (Exception e) {
+                log.debug("RealDataService: couldn't ping {} — {}", device.getDeviceName(), e.getMessage());
+            }
         }
     }
 
@@ -96,7 +181,9 @@ public class RealDataService {
 
         if (os.contains("win")) {
             // Windows: use netstat -e to get total bytes sent/received
-            Process process = Runtime.getRuntime().exec("netstat -e");
+            ProcessBuilder pb = new ProcessBuilder("netstat", "-e");
+            pb.redirectErrorStream(true);
+            Process process = pb.start();
             String output = new String(process.getInputStream().readAllBytes());
 
             for (String line : output.split("\n")) {
